fix issue displaying on small screens

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ body{
     background-color: black;
     color: white;
     display: flex;
-    font-size: 42px;
-    font-weight: 100;
+}
+#header * {
+    margin:auto;
 }
 #home{
     padding-left:8px;
@@ -129,8 +130,10 @@ body{
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 30px;
-    height: 40px;
+}
+
+.slideshow .slide .title h4{
+    margin: 0;
 }
 .slideshow .slide{
     height:400px;
@@ -166,7 +169,8 @@ body{
     #header,.slideshow .slide .title  {background-color: #011655};
     
     #header{
-        font-size: 30px;
+        font-size: 20px;
+        width: 100%;
     }
     #header *{
         margin: 10px;
@@ -174,6 +178,11 @@ body{
     .slideshow .slide{
         width:100%;
         height: fit-content;
+        border:none;
+        margin-top: 0px;
+    }
+    .slideshow .slide:nth-child(1){
+        margin-top: 5px;
     }
     .slideshow .slide .wrapper{
         background-color: #00238B;
@@ -181,23 +190,26 @@ body{
         height: fit-content;
         position: relative;
         display: inline-block;
-        box-sizing: border-box;
-        padding:20px;
+        padding:55px 0px;
     }
     .slideshow .slide .wrapper .content{
         position: absolute;
         top: 0;
         left:0;
         color: white;
-        font-size: 26px;
         box-sizing: border-box;
-        padding:20px;
+        padding: 5px 10px;
     }
-    #bookingLink *{
-        font-size: 30px;
-
+    .slideshow .slide .InfoWrapper{
+        flex-direction: column;
     }
-     
+    
+    .slideshow .slide p, ul{
+        margin:8px 0px;
+    }
+    .slideshow .slide .title{
+        height:20px;
+    }
     .slideshow .slide img{
         filter:blur(5px);
         opacity: 0.3;
